third commit part 4

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "shop-hub",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fedasamehShp.github.io/shop-hub2",
+  "homepage": "https://fhsaf.github.io/fedasamehShp.github.io",
   "dependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/jest-dom": "^4.2.4", 
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "gh-pages": "^2.1.1",
